<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="10"
     >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.5"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" 
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_count"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/android_logo_red"
            android:src="@drawable/android_logo_red" />

        <TextView
            android:id="@+id/tvteam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team1"
            android:textColor="#FF0000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvfinals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_text"
            android:textColor="#FF0000"
            android:textSize="14sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/verses"
            android:textColor="#000099"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.5"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_date"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/android_logo_red"
            android:src="@drawable/android_logo_green" />

        <TextView
            android:id="@+id/tvteam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team2"
            android:textColor="#FF0000" />
    </LinearLayout>

</LinearLayout>